fixed featured cabins grid

--- a/cabins.css
+++ b/cabins.css
@@ -39,6 +39,7 @@ ul.featured-cabins {
   grid-template-columns: repeat(auto-fit, minmax(200px, 200px));
   place-content: center;
   margin-top: 4em;
+  margin-left: 0;
   width: 100%;
 }
 
@@ -65,5 +66,15 @@ ul.featured-cabins {
   
   .sub-desc {
     width: 100%;
+  }
+}
+
+@media (max-width: 550px) {
+  ul.featured-cabins li:nth-child(odd) {
+    margin-right: 0.75em; 
+  }
+
+  ul.featured-cabins li:nth-child(even) {
+    margin-left: 0.75em; 
   }
 }
